--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         otp: ['22.2', '22.3', '23.0', '23.2']
-        elixir: ['1.9.4', '1.10.3']
+        elixir: ['1.10.3']
 
     steps:
     - uses: actions/checkout@v2
