--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: ['22.2', '22.3', '23.0', '23.2']
+        otp: ['23.0', '23.2']
         elixir: ['1.10.3']
 
     steps:
