--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,8 +13,8 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: ['23.0', '23.2']
-        elixir: ['1.10.3']
+        otp: [21.x, 22.x, 23.x]
+        elixir: [1.8.x, 1.9.x, 1.10.x, 1.11.x]
 
     steps:
     - uses: actions/checkout@v2
@@ -31,5 +31,7 @@ jobs:
         restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: mix deps.get
+    - name: Check format
+      run: mix format --check-formatted
     - name: Run tests
       run: mix test
