--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: [21.x, 22.x, 23.x]
+        otp: [22.x, 23.x]
         elixir: [1.10.x, 1.11.x]
 
     steps:
