--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        otp: [22.x, 23.x]
+        otp: [21.x, 22.x, 23.x]
         elixir: [1.10.x, 1.11.x]
 
     steps:
@@ -23,6 +23,7 @@ jobs:
       with:
         elixir-version: ${{matrix.elixir}} # Define the elixir version [required]
         otp-version: ${{matrix.otp}} # Define the OTP version [required]
+        experimental-otp: true
     - name: Restore dependencies cache
       uses: actions/cache@v2
       with:
