--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -31,7 +31,9 @@ jobs:
     #    key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
     #    restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
-      run: mix deps.get
+      run: |
+        mix deps.clean
+        mix deps.get
     - name: Check format
       run: mix format --check-formatted
     - name: Run tests
