--- a/.github/workflows/elixir.yml
+++ b/.github/workflows/elixir.yml
@@ -32,7 +32,7 @@ jobs:
     #    restore-keys: ${{ runner.os }}-mix-
     - name: Install dependencies
       run: |
-        mix deps.clean
+        mix deps.clean --all
         mix deps.get
     - name: Check format
       run: mix format --check-formatted
