--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,9 +41,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Build container image
+    
+    - name: Build and push container image
       uses: docker/build-push-action@v2
       with:
         username: ${{ github.actor }}
@@ -52,3 +54,13 @@ jobs:
         repository: docker.pkg.github.com/eigr/astreu/astreu
         tag_with_sha: true
         tag_with_ref: true
+    
+    #- name: Build and push container image on Docker HUB
+    #  uses: docker/build-push-action@v2
+    #  with:
+    #    username: ${{ secrets.DOCKER_USERNAME }}
+    #    password: ${{ secrets.DOCKER_PASSWORD }}
+    #    registry: docker.pkg.github.com
+    #    repository: hub.docker.com/repository/docker/eigr/astreu/eigr/astreu
+    #    tag_with_sha: true
+    #    tag_with_ref: true
